@@ -267,6 +267,16 @@ DEVNODES_DEVICES	+= $(DEVNODES_DISK)					\
 	b,8,83,/dev/sdf3	b,8,84,/dev/sdf4	b,8,85,/dev/sdf5
 endif
 
+ifneq ($(PTXCONF_DEVNODES_BLK_XSA),)
+DEVNODES_DEVICES	+= $(DEVNODES_DISK)					\
+	b,$(PTXCONF_DEVNODES_BLK_XSA_MAJOR),0,/dev/xsa				\
+	b,$(PTXCONF_DEVNODES_BLK_XSA_MAJOR),1,/dev/xsa1				\
+	b,$(PTXCONF_DEVNODES_BLK_XSA_MAJOR),2,/dev/xsa2				\
+	b,$(PTXCONF_DEVNODES_BLK_XSA_MAJOR),3,/dev/xsa3				\
+	b,$(PTXCONF_DEVNODES_BLK_XSA_MAJOR),4,/dev/xsa4				\
+	b,$(PTXCONF_DEVNODES_BLK_XSA_MAJOR),5,/dev/xsa5
+endif
+
 ifneq ($(PTXCONF_DEVNODES_ICAP),)
 DEVNODES_DEVICES	+= $(DEVNODES_PRIVATE)					\
 	c,259,0,/dev/icap0	c,259,1,/dev/icap1	c,259,2,/dev/icap2
